--- a/styles/index.css
+++ b/styles/index.css
@@ -44,18 +44,28 @@ li{
     font-size: 14;
     list-style-type: none;
     padding-bottom: 20px;
-    margin-left: -35px;
+    margin-left: -40px;
 
+}
+
+li:hover{
+    color: #FF9900;
+}
+
+.pre-h2{
+    margin-bottom: -15px;
 }
 
 nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
+    position: sticky;
 }
 
 .logo{
     width:185px;
+    margin: 0px;
 }
 
 .nav-links{
@@ -87,12 +97,38 @@ nav{
 .intro .text {
     width:500px;
     height:300px;
-    margin-right: 40px;
+}
+
+.intro-buttons{
+    display: flex;
+    align-items: baseline;
+    height: 50px;
+
+}
+
+.play-icon{
+    width: 15px;
+    height: 20px;
+    margin-left: 40px;
+    margin-right: 10px;
+}
+
+.watch-video{
+    font-family: poppins;
+    color: #FF9900;
+    text-decoration: underline;
+}
+
+.watch-video:hover{
+    font-family: poppins;
+    color: #173A56;
+    text-decoration: underline;
 }
 
 img{
     max-width:600px;
     max-height: 500px;
+    margin: 80px;
 }
 
 button{
@@ -107,6 +143,12 @@ button{
     border-width: 2px;
 }
 
+button:hover{
+    background:#173A56;
+    color: #ffffff;
+    border: none;
+  }
+
 
 .we-design-tools{
     display: flex;
@@ -116,6 +158,10 @@ button{
     align-content: center;
     flex-wrap: wrap;
     margin: 70px 0px 100px 0px;
+}
+
+.we-design-heading{
+    text-align: center;
 }
 
 .service{
@@ -144,6 +190,7 @@ button{
 
 .icon{
     width: 50px;
+    margin: 5px;
 }
 
 
@@ -167,12 +214,13 @@ button{
 }
 
 .content{
-    margin: 50px;
+    margin: 0px;
 }
 
 
 hr{
    margin-bottom: 100px; 
+   margin-top: 50px;
    border: 1px solid #bcd0e567;
 }
 
